@@ -20,6 +20,7 @@ dependencies {
 tasks.withType(Test).configureEach {
     systemProperty redirectPipeCreationModeProperty, redirectPipeCreationModeReflection
     jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
+    jvmArgs "--add-opens=java.base/java.io=ALL-UNNAMED"
 }
 
 graalvmNative {
@@ -27,6 +28,7 @@ graalvmNative {
         all {
             buildArgs.add('--initialize-at-run-time=org.aesh.terminal.utils.OSUtils')
             buildArgs.add('--add-opens=java.base/java.lang=ALL-UNNAMED')
+            buildArgs.add('--add-opens=java.base/java.io=ALL-UNNAMED')
         }
         test {
             runtimeArgs("-D${redirectPipeCreationModeProperty}=${redirectPipeCreationModeReflection}")
